# cesure

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
cesure/: __init__.py  main.py  middleware.py
cesure/alembic/: env.py
cesure/alembic/versions/: email_verification_fields.py  initial_migration.py
cesure/auth/: README.md  email.py  oauth.py  routes.py  utils.py
cesure/models/: __init__.py  artist.py  artwork.py  base.py  competition.py  competition_entry.py  competition_judge.py  competition_result.py  event.py  user.py
cesure/static/css/: main.css
cesure/static/js/: validation.js
cesure/templates/: error.html  home.html  login.html  register.html  welcome.html
postgres_data/: postmaster.pid
postgres_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres_data/base/5/: 1247  1249  1259  1259_vm  16384  16387  16389  16390  16397  16398  16400  16402  16404  16412  16413  16420  16428  16429  16436  16444  16445  16447  16455  16456  16458  16466  16474  16482  16483  16500  16508  16509  2224  2579  2604  2606  2608  2610  2620  2656  (+21 more)
postgres_data/global/: 1260  pg_control  pg_internal.init
scripts/: alembic  debug_app.py  docker_init_db.py  docker_reset_db.py
